# blocktrain

./: CITATION.cff  LICENSE  README.md  pyproject.toml
config/: experiment.yaml  notebook_experiment.yaml  test_experiment.yaml
data/: eval_indicies.json  test_indicies.json  train_indicies.json
docs/: DecisionLog.md
docs/diagrams/: component_design.drawio  experiment_block_diagram.drawio
notebooks/: ir_dataloader.ipynb  ir_dataset_folder_analysis.ipynb  ir_dataset_full_concat.ipynb  ir_dataset_image_labels.ipynb  ir_dataset_loading.ipynb  train.ipynb  train_eval_test_split.ipynb
src/blocktrain/: __init__.py  blocktrain.py  callbacks.py  cli.py  component.py  component_api.py  experiment.py  experiment_api.py  train.py  trainer..py  trainer.py  trainer_api.py  utilities.py
src/blocktrain/datasets/: ir_dataset.py  ir_folder_image_file_system_dataset.py  ir_ram_dataset.py  label.py
src/blocktrain/factories/: dataloader_factory.py  experiment_factory.py  loader.py  optimizer_factory.py  torchvision_model_factory.py  trainer_factory.py
src/blocktrain/test_utilities/: path_utilities.py  utilities.py
src/trainblock/: __init__.py  cli.py  collator.py  component_api.py  experiment.py  experiment_api.py  train.py  trainblock.py  trainer.py  utilities.py
src/trainblock/datasets/: ir_dataset.py  ir_folder_image_file_system_dataset.py  ir_ram_dataset.py
src/trainblock/factories/: dataloader_factory.py  experiment_factory.py  loader.py  optimizer_factory.py
src/trainblock/test_utilities/: utilities.py
tests/: test_instantiation.py
