[tool.poetry]
name = "blocktrain"
version = "0.0.1"
description = "Component building blocks for supervised ML training"
authors = ["loppjp <jacob.lopp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
torch = "^2.8.0"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"

[tool.poetry.extras]
formatting = ["black"]

[tool.poetry.scripts]
blocktrain = 'blocktrain.cli:main'

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
black = {extras = ["jupyter"], version = "^25.1.0"}
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"